[project]
name = "pyspark-delta-iceberg2"
version = "0.1.0"
description = "Projeto pyspark com delta-lake e apache-iceberg"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "delta-spark==3.2.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.1",
    "mkdocs>=1.6.1",
    "pyspark==3.5.3",
    "ruff>=0.11.6",
]
